# quolab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
bench/: coir_eval.py  run_bench.py
bench/fixtures/: queries.json  queries_semantic.json
ci/: quolab.gitlab-ci.yml
deploy/: README.md  cloudrun.env.yaml
src/quolab/: __init__.py  app.py  cli.py  config.py  embedder.py  engine.py  indexer.py  mcp_server.py  models.py  policy.py  policy_cli.py  retrieval.py  store.py
src/quolab/static/: dashboard.html
tests/: conftest.py  test_app.py  test_cast_chunking.py  test_chunker.py  test_cli_and_bench.py  test_dashboard.py  test_engine.py  test_incremental.py  test_index_guard.py  test_mcp.py  test_ndcg.py  test_policy.py  test_rerank.py  test_retrieval.py  test_robustness.py  test_security_boundary.py  test_security_fetch.py  test_security_output.py  test_store.py
