[project]
name = "quolab"
version = "0.1.0"
description = "An open-source slice of GitLab Ultimate: from-scratch semantic code search + merge-gate policy engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Kaustubh Upadhyay" }]
keywords = ["semantic-search", "code-search", "gitlab", "embeddings", "mcp", "devtools"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "structlog>=24.1",
    "google-genai>=1.0",
    "numpy>=1.26",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# tree-sitter gives semantic (function/class) chunking. Optional: the indexer falls
# back to line-window chunking when it is absent, so the package installs everywhere.
treesitter = ["tree-sitter>=0.21,<0.22", "tree-sitter-languages>=1.10"]
pg = ["psycopg[binary]>=3.1", "pgvector>=0.2"]
local = ["sentence-transformers>=3.0"]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
quolab = "quolab.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quolab = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
